# autotester

./: .gitignore  LICENSE  PLAN.md  README.md  TTASKS_PORT.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: docs.yml
docs/: commands.md  development.md  index.md  programs.md  quickstart.md  storage.md
docs/modes/: bugfix.md  optimize.md
examples/: results.tsv
programs/: autotester.md  bug-finder.md  dep-pruner.md  doc-writer.md  simplifier.md  ttasks.md  type-tightener.md
spikes/: ttasks_mini_autotester.py  ttasks_session_smoke.py
src/: attempt.ts  bugfix.ts  cli.ts  git.ts  history.ts  metric.ts  prompt.ts  results.ts  runner.ts  scope.ts
src/autotester/: __init__.py  bugfix.py  cli.py  git.py  graphs.py  history.py  program.py  prompt.py  runner.py
src/autotester/programs/: autotester.md  bug-finder.md  coverage-raiser.md
test/: attempt.test.ts  bugfix.test.ts  front-matter.test.ts  git.test.ts  history.test.ts  metric.test.ts  prompt.test.ts  results.test.ts  scope.test.ts
tests/: test_bugfix.py  test_git.py  test_history.py  test_metric.py  test_program.py  test_prompt.py
