[project]
name = "autotester"
version = "0.1.0"
description = "Agent-driven repository improvement loops"
authors = [
    { name = "Ian Philpot", email = "ian.philpot@outlook.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
autotester = "autotester:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
